# gedl

./: Makefile  README.md  README.txt  clip.c  config.h  default.edl  gedl-ui.c  gedl.c  gedl.h  iconographer.c  meson.build  renderer.c  renderer.h
operations/: Makefile  tdiff.c  tmedian.c
